--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 }
 
 form {
-  max-width: 400px;
+  max-width: 500px;
   margin: 20px auto;
   padding: 20px;
   background-color:bisque;
@@ -77,4 +77,121 @@ input{
   border-radius: 30px;
   box-shadow: 0 0 5px 3px bisque;
 
+}
+
+.img{
+  width: 100%;
+  height: auto;
+}
+
+
+
+.login{
+ text-align: center;
+ font-size: medium;
+}
+
+.btn{
+  background-color: #007bff;
+  padding: 10px;
+  border-radius: 50px;
+  color: #fff;
+}
+
+.btn:hover{
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid #007bff;
+  box-shadow: 0 0 5px 3px #007bff;
+
+}
+
+.btn-home {
+  text-decoration: none;
+  position: relative;
+  top: 50%;
+  left: 45%;
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid #007bff;
+  box-shadow: 0 0 5px 3px #007bff;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+#chat_icon{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  margin: 20px;
+  border-radius: 50%;
+  border: none;
+  color: #fff;
+  box-shadow: 0 0 5px 3px #007bff;
+  cursor: pointer;
+  /* z-index: 1000; */
+}
+
+#chat_icon:hover{
+  background-color: #007bff;
+  color: #fff;
+  box-shadow: 0 0 5px 3px #fff;
+}
+
+.chat{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  height: 400px;
+  margin: 20px;
+  border-radius: 10px;
+  border: none;
+  color: black;
+  cursor: pointer;
+  font-size: medium;
+  display: none;
+}
+
+
+.chat_header h6{
+  text-align: center;
+  color: #007bff;
+}
+
+#close_chat{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+  border: none;
+  background-color:bisque;
+  cursor: pointer;
+}
+
+.send-button{
+  background-color: #007bff;
+  margin: 5px;
+  padding: 4px;
+  border-radius: 10px;
+  color: #fff;
+}
+
+
+.send-button:hover{
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid #007bff;
+  box-shadow: 0 0 5px 3px #007bff;
+
+}
+
+@media screen and (max-width: 768px) {
+  .form{
+    display: none;
+  }
 }
