--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,8 @@ input{
 }
 
 #chat_icon:hover{
-  background-color: #007bff;
-  color: #fff;
+  background-color: #fff;
+  color: #007bff;
   box-shadow: 0 0 5px 3px #fff;
 }
 
